--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -21,9 +21,14 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kty-V1-zIT">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="s9p-Dv-qQk">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="RPL-mY-WZy" detailTextLabel="ew3-1I-it3" style="IBUITableViewCellStyleSubtitle" id="dSm-zC-Seh">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dSm-zC-Seh" id="Wbl-Pq-EmO">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
@@ -70,6 +75,7 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="search" destination="kty-V1-zIT" id="W0g-Ca-6Jb"/>
                         <outlet property="tableView" destination="kty-V1-zIT" id="YmV-Be-p5s"/>
                         <segue destination="ed5-6I-wHz" kind="show" identifier="cellSegue" id="rDo-lS-BIR"/>
                     </connections>
@@ -90,19 +96,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24z-Ek-Pqg">
-                                <rect key="frame" x="16" y="74" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24z-Ek-Pqg">
+                                <rect key="frame" x="16" y="181" width="29" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QkD-Qy-smp">
-                                <rect key="frame" x="16" y="105" width="343" height="30"/>
+                                <rect key="frame" x="16" y="221" width="351" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eP5-1w-a2D">
-                                <rect key="frame" x="16" y="176" width="343" height="120"/>
+                                <rect key="frame" x="12" y="288" width="351" height="120"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="AHh-WN-Rkf"/>
@@ -112,7 +118,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="yuJ-za-kdE">
-                                <rect key="frame" x="16" y="306" width="343" height="120"/>
+                                <rect key="frame" x="12" y="416" width="351" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="ht4-n6-kHL"/>
                                 </constraints>
@@ -120,32 +126,44 @@
                                     <!--2016-10-04 11:27:12 +0000-->
                                 </date>
                             </datePicker>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Co4-vo-NNk">
-                                <rect key="frame" x="16" y="145" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Co4-vo-NNk">
+                                <rect key="frame" x="16" y="265" width="59" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cSd-Kt-N0N">
+                                <rect key="frame" x="20" y="135" width="343" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NPV-1R-tx3">
+                                <rect key="frame" x="16" y="98" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="yuJ-za-kdE" firstAttribute="trailing" secondItem="boF-Zq-xEf" secondAttribute="trailingMargin" id="1Xd-qp-Abd"/>
-                            <constraint firstItem="eP5-1w-a2D" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" id="1gB-VJ-5e9"/>
-                            <constraint firstItem="QkD-Qy-smp" firstAttribute="top" secondItem="24z-Ek-Pqg" secondAttribute="bottom" constant="10" id="AIN-gY-2I3"/>
-                            <constraint firstItem="24z-Ek-Pqg" firstAttribute="top" secondItem="4xu-ub-irV" secondAttribute="bottom" constant="10" id="AKx-rK-xNl"/>
-                            <constraint firstItem="eP5-1w-a2D" firstAttribute="top" secondItem="Co4-vo-NNk" secondAttribute="bottom" constant="10" id="RuN-Bk-Nyf"/>
-                            <constraint firstItem="Co4-vo-NNk" firstAttribute="top" secondItem="QkD-Qy-smp" secondAttribute="bottom" constant="10" id="U7x-5i-rYp"/>
-                            <constraint firstItem="yuJ-za-kdE" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" id="a9p-y4-X8I"/>
-                            <constraint firstItem="yuJ-za-kdE" firstAttribute="top" secondItem="eP5-1w-a2D" secondAttribute="bottom" constant="10" id="fOK-tQ-xxZ"/>
+                            <constraint firstItem="yuJ-za-kdE" firstAttribute="trailing" secondItem="boF-Zq-xEf" secondAttribute="trailingMargin" constant="4" id="1Xd-qp-Abd"/>
+                            <constraint firstItem="eP5-1w-a2D" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" constant="-4" id="1gB-VJ-5e9"/>
+                            <constraint firstItem="QkD-Qy-smp" firstAttribute="top" secondItem="24z-Ek-Pqg" secondAttribute="bottom" constant="19" id="AIN-gY-2I3"/>
+                            <constraint firstItem="24z-Ek-Pqg" firstAttribute="top" secondItem="4xu-ub-irV" secondAttribute="bottom" constant="117" id="AKx-rK-xNl"/>
+                            <constraint firstItem="eP5-1w-a2D" firstAttribute="top" secondItem="Co4-vo-NNk" secondAttribute="bottom" constant="2" id="RuN-Bk-Nyf"/>
+                            <constraint firstItem="Co4-vo-NNk" firstAttribute="top" secondItem="QkD-Qy-smp" secondAttribute="bottom" constant="14" id="U7x-5i-rYp"/>
+                            <constraint firstItem="yuJ-za-kdE" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" constant="-4" id="a9p-y4-X8I"/>
+                            <constraint firstItem="yuJ-za-kdE" firstAttribute="top" secondItem="eP5-1w-a2D" secondAttribute="bottom" constant="8" id="fOK-tQ-xxZ"/>
                             <constraint firstItem="24z-Ek-Pqg" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" id="kd8-M7-9is"/>
-                            <constraint firstItem="eP5-1w-a2D" firstAttribute="trailing" secondItem="boF-Zq-xEf" secondAttribute="trailingMargin" id="nve-Et-0q7"/>
+                            <constraint firstItem="eP5-1w-a2D" firstAttribute="trailing" secondItem="boF-Zq-xEf" secondAttribute="trailingMargin" constant="4" id="nve-Et-0q7"/>
                             <constraint firstItem="QkD-Qy-smp" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" id="p3B-3m-pFU"/>
                             <constraint firstItem="Co4-vo-NNk" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" id="pC1-Fv-DEI"/>
-                            <constraint firstItem="QkD-Qy-smp" firstAttribute="trailing" secondItem="boF-Zq-xEf" secondAttribute="trailingMargin" id="u53-F7-ojg"/>
+                            <constraint firstItem="QkD-Qy-smp" firstAttribute="trailing" secondItem="boF-Zq-xEf" secondAttribute="trailingMargin" constant="8" id="u53-F7-ojg"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="category" destination="cSd-Kt-N0N" id="VMc-s6-S2O"/>
                         <outlet property="contentsText" destination="eP5-1w-a2D" id="9rU-7m-o6R"/>
                         <outlet property="datePicker" destination="yuJ-za-kdE" id="y5y-1e-tD4"/>
                         <outlet property="titleText" destination="QkD-Qy-smp" id="Ubo-Fi-kNF"/>
