--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kty-V1-zIT">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="s9p-Dv-qQk">
+                                <searchBar key="tableHeaderView" contentMode="redraw" text="" id="s9p-Dv-qQk">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
@@ -75,14 +75,14 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="search" destination="kty-V1-zIT" id="J84-oy-uJn"/>
+                        <outlet property="search" destination="s9p-Dv-qQk" id="yYX-dH-aDp"/>
                         <outlet property="tableView" destination="kty-V1-zIT" id="YmV-Be-p5s"/>
                         <segue destination="ed5-6I-wHz" kind="show" identifier="cellSegue" id="rDo-lS-BIR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1090.5" y="393.5"/>
+            <point key="canvasLocation" x="1062.5" y="393.5"/>
         </scene>
         <!--Input View Controller-->
         <scene sceneID="P1x-vU-q7k">
@@ -103,7 +103,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QkD-Qy-smp">
-                                <rect key="frame" x="16" y="221" width="351" height="30"/>
+                                <rect key="frame" x="12" y="221" width="324" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -132,17 +132,21 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cSd-Kt-N0N">
-                                <rect key="frame" x="20" y="135" width="343" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NPV-1R-tx3">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NPV-1R-tx3">
                                 <rect key="frame" x="16" y="98" width="68" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cSd-Kt-N0N">
+                                <rect key="frame" x="16" y="134" width="264" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="264" id="9An-9N-P9M"/>
+                                    <constraint firstAttribute="height" constant="30" id="z7b-fd-rUZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -153,12 +157,16 @@
                             <constraint firstItem="eP5-1w-a2D" firstAttribute="top" secondItem="Co4-vo-NNk" secondAttribute="bottom" constant="2" id="RuN-Bk-Nyf"/>
                             <constraint firstItem="Co4-vo-NNk" firstAttribute="top" secondItem="QkD-Qy-smp" secondAttribute="bottom" constant="14" id="U7x-5i-rYp"/>
                             <constraint firstItem="yuJ-za-kdE" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" constant="-4" id="a9p-y4-X8I"/>
+                            <constraint firstItem="NPV-1R-tx3" firstAttribute="top" secondItem="4xu-ub-irV" secondAttribute="bottom" constant="34" id="dRs-e0-HAF"/>
                             <constraint firstItem="yuJ-za-kdE" firstAttribute="top" secondItem="eP5-1w-a2D" secondAttribute="bottom" constant="8" id="fOK-tQ-xxZ"/>
+                            <constraint firstItem="cSd-Kt-N0N" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leading" constant="16" id="kFg-oR-gHY"/>
                             <constraint firstItem="24z-Ek-Pqg" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" id="kd8-M7-9is"/>
                             <constraint firstItem="eP5-1w-a2D" firstAttribute="trailing" secondItem="boF-Zq-xEf" secondAttribute="trailingMargin" constant="4" id="nve-Et-0q7"/>
-                            <constraint firstItem="QkD-Qy-smp" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" id="p3B-3m-pFU"/>
+                            <constraint firstItem="QkD-Qy-smp" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" constant="-4" id="p3B-3m-pFU"/>
                             <constraint firstItem="Co4-vo-NNk" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leadingMargin" id="pC1-Fv-DEI"/>
-                            <constraint firstItem="QkD-Qy-smp" firstAttribute="trailing" secondItem="boF-Zq-xEf" secondAttribute="trailingMargin" constant="8" id="u53-F7-ojg"/>
+                            <constraint firstItem="cSd-Kt-N0N" firstAttribute="top" secondItem="NPV-1R-tx3" secondAttribute="bottom" constant="15" id="qcq-cr-lJ2"/>
+                            <constraint firstItem="QkD-Qy-smp" firstAttribute="trailing" secondItem="boF-Zq-xEf" secondAttribute="trailingMargin" constant="-23" id="u53-F7-ojg"/>
+                            <constraint firstItem="NPV-1R-tx3" firstAttribute="leading" secondItem="boF-Zq-xEf" secondAttribute="leading" constant="16" id="zOn-uH-5i6"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
